feat: implementação e reajustes no método de listagem
