# app/Http/Requests/Travel/OrderTravelIndexRequest.php
@@ -29,7 +29,7 @@ class OrderTravelIndexRequest extends FormRequest
             'order_travel_status_id' => ['nullable', 'exists:order_travel_status,id'],
             'paginate' => ['nullable', 'boolean'],
             'departure_date' => ['nullable', 'date_format:Y-m-d'],
-            'return_date' => ['nullable', 'date_format:Y-m-d'],
+            'return_date' => ['nullable', 'date_format:Y-m-d','after:departure_date'],
             'destination' => ['nullable', 'string'],
             'limit' => ['nullable', 'integer'],
         ];
@@ -53,11 +53,10 @@ class OrderTravelIndexRequest extends FormRequest
      */
     protected function prepareForValidation(): void
     {
-        dd($this->input('paginate'));
-        $paginate = false;
+        $paginate = true;
 
-        if ($this->paginate && $this->paginate == 'true') {
-            $paginate = true;
+        if ($this->paginate && $this->paginate == 'false') {
+            $paginate = false;
         }
 
         $this->merge([
